--- a/index.html
+++ b/index.html
@@ -3,38 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SurVis</title>
+    <title>Research Report | SurVis</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>欢迎来到 SurVis 网站</h1>
+        <h1>Research Report</h1>
         <nav>
             <ul>
-                <li><a href="#home">首页</a></li>
-                <li><a href="#about">关于我们</a></li>
-                <li><a href="#contact">联系我们</a></li>
+                <li><a href="#abstract">Abstract</a></li>
+                <li><a href="#introduction">Introduction</a></li>
+                <li><a href="#methodology">Methodology</a></li>
+                <li><a href="#results">Results</a></li>
+                <li><a href="#conclusion">Conclusion</a></li>
             </ul>
         </nav>
     </header>
 
-    <section id="home">
-        <h2>主页内容</h2>
-        <p>这是SurVis的主页。</p>
+    <section id="abstract">
+        <h2>Abstract</h2>
+        <p>Brief summary of your research work and findings.</p>
     </section>
 
-    <section id="about">
-        <h2>关于我们</h2>
-        <p>我们提供先进的分析工具。</p>
+    <section id="introduction">
+        <h2>Introduction</h2>
+        <p>Background information and research objectives.</p>
     </section>
 
-    <section id="contact">
-        <h2>联系我们</h2>
-        <p>你可以通过电子邮件与我们联系。</p>
+    <section id="methodology">
+        <h2>Methodology</h2>
+        <p>Research methods and experimental procedures.</p>
+    </section>
+
+    <section id="results">
+        <h2>Results</h2>
+        <p>Research findings and data analysis.</p>
+    </section>
+
+    <section id="conclusion">
+        <h2>Conclusion</h2>
+        <p>Summary of findings and future research directions.</p>
     </section>
 
     <footer>
-        <p>&copy; 2025 SurVis 网站</p>
+        <p>&copy; 2025 Research Report</p>
     </footer>
 
     <script src="scripts.js"></script>
