--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         <!-- 左侧统计图表 -->
         <div class="charts-section">
             <div class="chart-container">
+                <h3>Classification of papers</h3>
+                <canvas id="pieChart"></canvas>
+            </div>
+            <div class="chart-container">
                 <h3>Publications by Year</h3>
                 <canvas id="yearChart"></canvas>
             </div>
